--- a/style.css
+++ b/style.css
@@ -1,3 +1,39 @@
+
+
+body {
+    margin: 0;
+    padding: 0;
+}
+
+.image-gauche {
+    margin-left: 60px; 
+    margin-right: 50px; 
+    width: 250px;
+    height: auto;
+}
+.liens-droite a {
+    color: white; 
+    text-decoration: none; 
+    margin-left: auto; 
+    margin-right: 20px;
+    align-items: center;
+    font-size: 20px;
+}
+.boutons-droite {
+    display: flex;
+    flex-direction: column; 
+    width: 150px;
+    margin-top: 20px;
+    height: 30px;
+    text-align: center;
+
+
+}
+.boutons-container {
+    margin-left: auto; 
+    padding-right: 50px;
+}
+
 .bandeau{
     background-color: #6b488b;
     width: 100%;
