--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 .image-gauche {
     margin-left: 60px; 
     margin-right: 50px; 
-    width: 250px;
+    width: 20%;
     height: auto;
 }
 .liens-droite a {
