--- a/style.css
+++ b/style.css
@@ -104,7 +104,38 @@ font-size: 36px;
     padding: 20px;
     color: black;
     right: 1;
-
     top: 44%;
     padding: 5px 10px;
+}
+
+.content-section {
+    display: flex;
+    flex-direction: row;
+    background-color: blue;
+    width: 100%;
+    padding: 20px;
+    font-size: 50;
+    margin-top: 10;
+    bottom: 0;
+    position: absolute;
+    align-items: center;
+}
+
+.content-section1 {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+.section2 {
+    padding: 10px;
+    width: 30%;
+    display: flex;
+    flex-direction: row;
+    background-color: yellow;
+}
+
+.lien-foot {
+    width: 20%;
+    height: 20%;
 }
