--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ font-size: 36px;
     background-color: white;
     width: 100%;
     padding: 20px;
-    font-size: 50;
+    font-size: 40;
     margin-top: 10;
     bottom: 0;
     position: absolute;
@@ -126,15 +126,15 @@ font-size: 36px;
     display: flex;
     flex-direction: column;
     text-align: center;
+    justify-content: space-around;
 }
 .section2 {
     padding: 10px;
-    width: 30%;
+    width: 100%;
     display: flex;
     flex-direction: row;
-    background-color: yellow;
 }
-.lien-foot {
-    width: 20%;
-    height: 20%;
+.liens-foot {
+    width: 80%;
+    height: 80%;
 }
