--- a/style.css
+++ b/style.css
@@ -26,9 +26,16 @@ body {
     margin-top: 20px;
     height: 30px;
     text-align: center;
-
-
+    background-color: white;
+    cursor:pointer;
+    transition: background-color 0.3s;
+    }
+    
+.boutons-droite:hover {
+    background-color: greenyellow;
 }
+
+
 .boutons-container {
     margin-left: auto; 
     padding-right: 50px;
@@ -113,11 +120,10 @@ font-size: 36px;
     flex-direction: row;
     background-color: white;
     width: 100%;
+    height: 20%;
     padding: 20px;
     font-size: 40;
     margin-top: 10;
-    bottom: 0;
-    position: absolute;
     align-items: center;
 }
 
@@ -126,6 +132,7 @@ font-size: 36px;
     flex-direction: column;
     text-align: center;
     justify-content: space-around;
+    height: 20%;
 }
 .section2 {
     padding: 10px;
