Change navbar color

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body {
 }
 
 .bandeau{
-    background-color: #6b488b;
+    background-color: #323674;
     width: 100%;
     padding: 20px;
     color: white;
